<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cyls_2020fall.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <argument
            android:name="username"
            app:argType="string"
            android:defaultValue="tyler" />
        <action
            android:id="@+id/action_navigation_home_pop"
            app:destination="@id/login_register"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cyls_2020fall.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cyls_2020fall.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <navigation android:id="@+id/login_register"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.example.cyls_2020fall.ui.login.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_login_to_home"
                app:destination="@id/navigation_home" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/themeColorsFragment"
        android:name="com.example.cyls_2020fall.ThemeColorsFragment"
        android:label="fragment_theme_colors"
        tools:layout="@layout/fragment_theme_colors" />
</navigation>